# ai-coding-tools

./: .gitignore  .shellcheckrc  AGENTS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/rules/: template-sync.md
.github/ISSUE_TEMPLATE/: agent_issue.yml  command_issue.yml  config.yml  hook_issue.yml  mcp_issue.yml  plugin_component_other.yml  skill_issue.yml
.github/scripts/: AGENTS.md  README.md  discover-components.sh  setup-bats.sh  update-issue-templates.sh  update-versions.sh  validate-issue-templates.sh  validate-template-sync.sh  validate-versions.sh
.github/workflows/: agent-skills-export-ci.yml  build-agent-skills.yml  ci.yml  test-hooks.yml  test-python.yml  validate-issue-templates.yml  validate-versions.yml  validate.yml
agent-skills-export/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
agent-skills-export/src/agent_skills_export/: __init__.py  __main__.py  cli.py  cli_list.py  core.py
agent-skills-export/tests/: conftest.py  test_build.py  test_discover.py  test_exclude.py  test_list.py  test_parse.py  test_transform.py
docs/: claude-code-setup.md
docs/rules/: README.md  calibrated-honesty-in-coding.md  calibrated-honesty.md  fail-hard-rules.md  npm-registry-access.md  research-rules.md
plugin-tests/: .shellcheckrc  AGENTS.md  README.md
plugin-tests/dev-tooling/: config_lsp_prefix.bats  docker_compose.bats  environment.bats  extra_log_file.bats  gh_tools.bats  js_storefront_tools.bats  lsp_bootstrap.bats  lsp_null.bats  mcp_tool_console.bats  mcp_tool_ecs.bats  mcp_tool_gh.bats  mcp_tool_js_admin.bats  mcp_tool_js_storefront.bats  mcp_tool_phpstan.bats  mcp_tool_phpunit.bats  mcp_tool_phpunit_coverage.bats  mcp_tool_rector.bats  php_tools.bats  phpstan_baseline.bats  scope_js_tools.bats  scope_php_tools.bats  scope_resolution.bats  scope_session_start.bats  scope_wrap.bats  session_start.bats
plugin-tests/gh-tooling/: api_read_restriction.bats  check_api_tools.bats  extra_log_file.bats  gh_tools.bats  gh_tools_write.bats  mcp_tool_gh.bats  read_tools_new.bats  session_start.bats  session_start_write.bats  write_server_gating.bats  write_tools_edit_params.bats  write_tools_graphql.bats  write_tools_issue.bats  write_tools_pr.bats  write_tools_project.bats  write_tools_review.bats
plugin-tests/shopware-env/: config_fallback.bats  hook_enforcement.bats  lifecycle_tools.bats  session_start.bats
plugin-tests/test_helper/: common_setup.bash
plugins/adr-writing/: AGENTS.md  README.md
plugins/chunkhound-integration/: AGENTS.md  CHANGELOG.md  README.md  SETUP.md
plugins/ci-failure-interpretation/: AGENTS.md  CHANGELOG.md  README.md
plugins/code-contribution-analysis/: AGENTS.md  CHANGELOG.md  README.md
plugins/contributor-writing/: AGENTS.md  CHANGELOG.md  README.md
plugins/dev-tooling/: .lsp.json  .mcp.json  AGENTS.md  (+4 more)
templates/: README.md
(+461 files in other folders)
